Fixed admin modal z-index

--- a/css_template/admin.css
+++ b/css_template/admin.css
@@ -413,6 +413,10 @@ a.brand span {
 	background: rgba(0,0,0,.25);
 }
 
+.modal-backdrop, .modal-backdrop.fade.in {
+	z-index: 2;
+}
+
 .nav-tabs.nav-stacked>li>a:hover, .nav-tabs.nav-stacked>li>a:focus {
 	background: rgba(0,0,0,.25) !important;
 }
